%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
\newcommand{\MPR}{\pkg{Matrix} \href{https://R-forge.R-project.org/tracker/index.php?func=detail&aid=#1&group_id=61&atid=294}{PR##1}}
\section{Changes in version 1.8-0 (2024-12-09, svn r5103)}{
  \subsection{Installation}{
    \itemize{
      \item \pkg{Matrix} \eqn{\ge}{>=} 1.8-0 depends on \R{}
      \eqn{\ge}{>=} 4.5.

      \item Compilation uses preprocessor options
      \option{-DSTRICT_R_HEADERS} and \option{-DR_NO_REMAP}.

      \item Warnings surfaced by \option{-Wconversion} (but not those
      originating in SuiteSparse) are squashed.
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item Coercions to \code{dpoMatrix} or \code{dppMatrix} are
      deprecated.  Coerce to new virtual class \code{posdefMatrix}
      instead.
    }
  }
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item Methods for \code{cov2cor} coerce the (symmetrized) argument
      to new virtual class \code{posdefMatrix} before scaling.  Hence an
      error is signaled where the (symmetrized) argument is not positive
      definite.  Use \code{dimScale} (introduced in \pkg{Matrix} 1.5-2)
      for more general scaling.
    }
  }
  \subsection{Classes}{
    \itemize{
      \item New virtual class \code{posdefMatrix} representing positive
      \emph{semi}definite matrices.  It extends virtual class
      \code{symmetricMatrix} and is extended by nonvirtual classes
      \code{[dz]p[CRTop]Matrix}, of which \code{dp[CRT]Matrix} and
      \code{zp[CRTop]Matrix} are new.  \code{posdefMatrix} are typically
      obtained as the result of \code{crossprod(x)} or
      \code{tcrossprod(x)} for \code{Matrix} \code{x}.  Coercions to
      \code{posdefMatrix} attempt Cholesky factorization, which can fail
      for near-singular positive semidefinite matrices.
